--- a/Frontend/public/account_privati.html
+++ b/Frontend/public/account_privati.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html class="titanium-forced-dark dark" lang="it">
+<html lang="it">
 
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="color-scheme" content="dark only">
-    <meta name="theme-color" content="#0a0f1e">
-    <title>Account Privati - Protocollo Titanium</title>
+
+    <title>Account Privati - Titanium Matrix</title>
 
     <!-- PWA / Mobile Capable -->
     <link rel="manifest" href="manifest.json" />
@@ -15,6 +14,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="App Codici">
+    <meta name="theme-color" content="#0a0f1e">
 
     <!-- Fonts & Icons -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,9 +23,13 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" />
 
-    <!-- Design System Standard v2.0 -->
-    <link rel="stylesheet" href="assets/css/titanium.css">
-    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+    <!-- Design System Master (Titanium Gold v3.5) -->
+    <link rel="stylesheet" href="assets/css/auth_account.css?v=3.5">
+
+    <!-- Core Engine -->
+    <script src="assets/js/titanium-config.js?v=3.5"></script>
+    <script src="assets/js/titanium-core.js?v=3.5"></script>
+    <script type="module" src="assets/js/ui-core.js?v=3.5"></script>
 </head>
 
 <body class="titanium-bg antialiased">
@@ -35,60 +39,59 @@
         <!-- 2. FARO ANIMATO "VIVO" (Standard Regola #3) -->
         <div class="glass-glow"></div>
 
-        <!-- 4. HEADER PLACEHOLDER -->
-        <div id="header-placeholder"></div>
+        <!-- HEADER FISSO (Protocollo v3.5) -->
+        <header class="titanium-header">
+            <div id="header-content" class="header-balanced-container">
+                <div class="header-left">
+                    <button onclick="history.back()" class="btn-icon-header">
+                        <span class="material-symbols-outlined">arrow_back</span>
+                    </button>
+                </div>
+                <div class="header-center">
+                    <h2 id="page-title" class="header-title" data-t="section_personal_accounts">Account Personali</h2>
+                </div>
+                <div class="header-right">
+                    <a href="aggiungi_account_privato.html" class="btn-icon-header">
+                        <span class="material-symbols-outlined">add</span>
+                    </a>
+                </div>
+            </div>
+        </header>
 
         <main class="titanium-main">
+
+            <!-- SEARCH BAR (Titanium Matrix) -->
             <div class="px-2 mb-6 relative z-40">
                 <div class="relative group">
                     <div class="absolute inset-y-0 left-4 flex items-center pointer-events-none">
-                        <span
-                            class="material-symbols-outlined text-white/20 group-focus-within:text-blue-400 transition-colors">search</span>
+                        <span class="material-symbols-outlined opacity-30">search</span>
                     </div>
-                    <input type="search" placeholder="Cerca account o credenziali..."
-                        class="w-full h-14 pl-12 pr-6 rounded-2xl border border-white/10 bg-[#0a0f1e]/40 backdrop-blur-xl text-white shadow-inner focus:ring-2 focus:ring-blue-500/50 focus:border-blue-500/50 transition-all placeholder:text-white/10">
+                    <input type="search" id="account-search" data-t-placeholder="search_placeholder"
+                        placeholder="Cerca account o credenziali..."
+                        class="w-full h-14 pl-12 pr-6 rounded-2xl border bg-black/5 dark:bg-white/5 border-white/10 dark:border-white/5 text-slate-900 dark:text-white text-sm focus:ring-2 focus:ring-blue-500/50 transition-all">
                 </div>
             </div>
 
             <!-- ACCOUNTS CONTAINER -->
-            <div id="accounts-container" class="grid grid-cols-1 md:grid-cols-2 gap-4 pb-24 px-2 relative z-30">
+            <div id="accounts-container" class="grid-2-cols pb-24 px-2 relative z-30">
                 <!-- Data loading placeholder -->
                 <div class="col-span-full py-20 flex flex-col items-center justify-center space-y-4 opacity-40">
                     <span class="material-symbols-outlined animate-spin text-4xl text-blue-400">sync</span>
-                    <p class="text-[10px] font-bold uppercase tracking-[0.3em]">Sincronizzazione Titanium...</p>
+                    <p class="text-[10px] font-bold uppercase tracking-[0.3em]" data-t="analyzing_data">Analisi dati...
+                    </p>
                 </div>
             </div>
 
         </main>
 
-        <!-- 5. FOOTER PLACEHOLDER -->
+        <!-- FOOTER PREMIUM -->
         <div id="footer-placeholder"></div>
-
-        <!-- ACTION BUTTON (FAB) - Integrated with latest Standard -->
-        <div class="fixed bottom-24 right-6 z-[60]">
-            <a href="aggiungi_account_privato.html" id="add-account-btn"
-                class="flex size-14 items-center justify-center rounded-2xl bg-gradient-to-tr from-blue-600 to-blue-400 text-white shadow-2xl shadow-blue-500/40 border-glow hover:scale-110 active:scale-95 transition-all duration-300">
-                <span class="material-symbols-outlined text-[32px]">add</span>
-            </a>
-        </div>
-
-        <!-- TOAST CONTAINER -->
-        <div id="toast-container"
-            class="fixed bottom-8 left-1/2 -translate-x-1/2 z-[300] flex items-center gap-3 px-6 py-4 bg-[#0a0f1e]/90 backdrop-blur-xl border border-white/10 rounded-2xl shadow-2xl opacity-0 translate-y-10 transition-all duration-500 pointer-events-none">
-            <span id="toast-icon" class="material-symbols-outlined"></span>
-            <span id="toast-message" class="text-xs font-bold uppercase tracking-widest text-white"></span>
-        </div>
 
     </div>
 
     <!-- SCRIPTS MODULARI -->
-    <script type="module" src="assets/js/main.js"></script>
-    <script type="module" src="assets/js/account_privati_titanium.js"></script>
-
-    <!-- Redirezione fallback per URL parametri se avviato con ?type= -->
-    <script>
-        // Manteniamo compatibilità con account_privati.js originale o il nuovo se rinominato
-    </script>
+    <script type="module" src="assets/js/main.js?v=3.5"></script>
+    <script type="module" src="assets/js/account_privati_titanium.js?v=3.5"></script>
 </body>
 
 </html>
