--- a/Frontend/public/aggiungi_scadenza.html
+++ b/Frontend/public/aggiungi_scadenza.html
@@ -15,7 +15,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
     <!-- Design System Master -->
-    <link rel="stylesheet" href="assets/css/auth_impostazioni.css">
+    <link rel="stylesheet" href="assets/css/auth_impostazioni.css?v=3.5">
 
     <!-- CSS specifico per input dinamici -->
     <style>
@@ -121,7 +121,7 @@
     <!-- Core Engine -->
     <script src="assets/js/titanium-config.js?v=3.5"></script>
     <script src="assets/js/titanium-core.js?v=3.5"></script>
-    <script src="assets/js/ui-core.js?v=3.5"></script>
+    <script type="module" src="assets/js/ui-core.js?v=3.5"></script>
 </head>
 
 <body class="antialiased">
@@ -546,18 +546,11 @@
         </div>
 
         <!-- FOOTER PREMIUM -->
-        <footer class="titanium-footer">
-            <div style="opacity: 0.3; text-align: center;">
-                <span
-                    style="font-size: 8px; font-weight: 800; letter-spacing: 0.3em; color: white; text-transform: uppercase;">
-                    Titanium Security Protocol V3.5
-                </span>
-            </div>
-        </footer>
+        <div id="footer-placeholder"></div>
     </div>
 
     <!-- Scripts -->
-    <script src="assets/js/main.js?v=3.5"></script>
+    <script type="module" src="assets/js/main.js?v=3.5"></script>
     <script src="assets/js/aggiungi_scadenza.js?v=3.5" type="module"></script>
 </body>
 
