--- a/Frontend/public/configurazione_generali.html
+++ b/Frontend/public/configurazione_generali.html
@@ -15,7 +15,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
     <!-- Design System Master (Solo Account) -->
-    <link rel="stylesheet" href="assets/css/auth_impostazioni.css">
+    <link rel="stylesheet" href="assets/css/auth_impostazioni.css?v=3.5">
 
     <!-- CSS specifico per tabelle -->
     <style>
@@ -42,7 +42,7 @@
     <!-- Core Engine -->
     <script src="assets/js/titanium-config.js?v=3.5"></script>
     <script src="assets/js/titanium-core.js?v=3.5"></script>
-    <script src="assets/js/ui-core.js?v=3.5"></script>
+    <script type="module" src="assets/js/ui-core.js?v=3.5"></script>
 </head>
 
 <body class="antialiased">
@@ -78,7 +78,7 @@
 
         <main class="settings-container no-select">
             <div class="settings-group">
-                <h4 class="settings-group-title">Logica Notifiche</h4>
+                <h4 class="settings-group-title" data-t="section_notifications_logic">Logica Notifiche</h4>
 
                 <!-- 1. Tipo Scadenza -->
                 <div class="settings-item accordion-header" data-target="container_types" style="cursor: pointer;">
@@ -117,7 +117,8 @@
                             </div>
                             <div class="settings-text">
                                 <span class="settings-label" data-t="section_email_template">Template Email</span>
-                                <span class="settings-desc">Testo personalizzato per l'invio</span>
+                                <span class="settings-desc" data-t="section_email_template_desc">Testo personalizzato
+                                    per l'invio</span>
                             </div>
                         </div>
                         <div style="display: flex; align-items: center; gap: 1rem;">
@@ -164,14 +165,7 @@
         </main>
 
         <!-- FOOTER PREMIUM -->
-        <footer class="titanium-footer">
-            <div style="opacity: 0.3; text-align: center;">
-                <span
-                    style="font-size: 8px; font-weight: 800; letter-spacing: 0.3em; color: white; text-transform: uppercase;">
-                    Titanium Security Protocol V3.5
-                </span>
-            </div>
-        </footer>
+        <div id="footer-placeholder"></div>
     </div>
 
     <!-- Scripts -->
