--- a/Frontend/public/dati_azienda.html
+++ b/Frontend/public/dati_azienda.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html class="dark" lang="en">
+<html lang="it">
 
 <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta name="color-scheme" content="dark only">
-    <meta name="theme-color" content="#0a0f1e">
+
     <title>Dati Azienda</title>
     <!-- Fonts and Icons -->
     <link href="https://fonts.googleapis.com" rel="preconnect" />
