--- a/Frontend/public/registrati.html
+++ b/Frontend/public/registrati.html
@@ -21,7 +21,7 @@
     <!-- TITANIUM AUTH SYSTEM V6.0 (Pure CSS) -->
     <link rel="stylesheet" href="assets/css/auth_accesso.css?v=6.0">
     <!-- Core UI per Toast (Protocollo V3) -->
-    <script src="assets/js/ui-core.js?v=2.2"></script>
+    <script type="module" src="assets/js/ui-core.js?v=2.2"></script>
 </head>
 
 <body>
