--- a/Frontend/public/regole_scadenze.html
+++ b/Frontend/public/regole_scadenze.html
@@ -15,12 +15,12 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
     <!-- Design System Master (Solo Account) -->
-    <link rel="stylesheet" href="assets/css/auth_impostazioni.css">
+    <link rel="stylesheet" href="assets/css/auth_impostazioni.css?v=3.5">
 
     <!-- Core Engine -->
     <script src="assets/js/titanium-config.js?v=3.5"></script>
     <script src="assets/js/titanium-core.js?v=3.5"></script>
-    <script src="assets/js/ui-core.js?v=3.5"></script>
+    <script type="module" src="assets/js/ui-core.js?v=3.5"></script>
 </head>
 
 <body class="antialiased">
@@ -67,7 +67,8 @@
                             </div>
                             <div class="settings-text">
                                 <span class="settings-label" data-t="card_vehicles_title">Automezzi</span>
-                                <span class="settings-desc">Configura regole invio veicoli</span>
+                                <span class="settings-desc" data-t="card_vehicles_desc">Configura oggetti, periodi e
+                                    frequenze email per veicoli</span>
                             </div>
                         </div>
                         <span class="material-symbols-outlined" style="opacity: 0.3;">chevron_right</span>
@@ -84,7 +85,8 @@
                             </div>
                             <div class="settings-text">
                                 <span class="settings-label" data-t="card_documents_title">Documenti</span>
-                                <span class="settings-desc">Regole per documenti personali</span>
+                                <span class="settings-desc" data-t="card_documents_desc">Gestione avvisi per Documenti e
+                                    Scadenze Varie</span>
                             </div>
                         </div>
                         <span class="material-symbols-outlined" style="opacity: 0.3;">chevron_right</span>
@@ -101,7 +103,8 @@
                             </div>
                             <div class="settings-text">
                                 <span class="settings-label" data-t="card_general_title">Regole Generali</span>
-                                <span class="settings-desc">Configura scadenze generiche</span>
+                                <span class="settings-desc" data-t="card_general_desc">Configura oggetti e testi per
+                                    scadenze generiche</span>
                             </div>
                         </div>
                         <span class="material-symbols-outlined" style="opacity: 0.3;">chevron_right</span>
@@ -112,14 +115,7 @@
         </main>
 
         <!-- FOOTER PREMIUM -->
-        <footer class="titanium-footer">
-            <div style="opacity: 0.3; text-align: center;">
-                <span
-                    style="font-size: 8px; font-weight: 800; letter-spacing: 0.3em; color: white; text-transform: uppercase;">
-                    Titanium Security Protocol V3.5
-                </span>
-            </div>
-        </footer>
+        <div id="footer-placeholder"></div>
 
     </div>
 
